I commented out the form sections

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                          <li><a href="#feature" class="smoothScroll">Purpose</a></</a></li>
                          <li><a href="#about" class="smoothScroll">About us</a></li>
                          <li><a href="#pricing" class="smoothScroll">Tutors</a></li>
-                         <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                         <!--<li><a href="#contact" class="smoothScroll">Contact</a></li>-->
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="mailto:teentutors624@gmail.com"><span>teentutors624@gmail.com</span></a></li>
@@ -83,10 +83,12 @@
                               <h3>Welcome to TeenTutors!</h3>
                               <h1>"Knowledge is power."</h1>
                               <h3>-Kofi Annan-</h3>
+                              <!--
                               <form action="" method="get" class="online-form">
                                    <input type="email" name="email" class="form-control" placeholder="Enter your email" required="">
                                    <button type="submit" class="form-control">Register</button>
                               </form>
+                              -->
                          </div>
                     </div>
 
@@ -439,7 +441,7 @@
      </section>   -->
 
 
-     <!-- CONTACT -->
+     <!-- CONTACT
      <section id="contact" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
@@ -467,7 +469,7 @@
 
                </div>
           </div>
-     </section>       
+     </section>      --> 
 
 
      <!-- FOOTER -->
