Added Leela's picture

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                                           <li>Spanish (Experience: Spanish 1-3)</li>
                                         <ul>
                                         <div class="testimonial-item">
-                                             <img src="images/tst-image2.jpg" class="img-responsive">
+                                             <img src="images/Leela.jpg" class="img-responsive">
                                              <h4>Leela</h4>
                                         </div>
                                    </div>
