added Erica's experience

--- a/index.html
+++ b/index.html
@@ -325,7 +325,12 @@
                                    </div>
 
                                    <div class="item">
-                                        <h3>Vestibulum tempor facilisis efficitur. Sed nec nisi sit amet nibh pellentesque elementum. In viverra ipsum ornare sapien rhoncus ullamcorper.</h3>
+                                        <ul>
+                                          <li> English (Advanced Experince: English 9 Advanced, AP English Language and Comprehension)</li>
+                                          <li>Math (Advanced Experience: Algebra I, Geometry, Algebra II, Trigonometry, Precalculus, Calculus)
+                                          <li> Science (Experience: Biology with Research, Honors Chemistry, AP Environmental Science)</li>
+                                          <li>Spanish (Experience: Spanish 1-4 Honors)</li>
+                                        <ul>
                                         <div class="testimonial-item">
                                              <img src="images/Erica.jpeg" class="img-responsive" alt="Erica">
                                              <h4>Erica</h4>
